fix align

--- a/css/screen.css
+++ b/css/screen.css
@@ -138,15 +138,12 @@ pre, code, .hljs {
 }
 
 @media (min-width: 1024px) {
-    .navbar {
-        min-height: 60px;
-    }
-    .navbar-nav>li>a {
-        padding: 30px 20px;
+     .navbar-nav>li>a {
+        padding: 20px 20px;
     }
     .navbar-default .navbar-brand {
         font-size: 20px;
-        padding: 25px 15px;
+        padding: 20px 20px;
     }
     #content{
         margin-top: 30px;
